[package]
name = "warp_utils"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
eth2 = { workspace = true }
headers = "0.3.2"
reqwest = { workspace = true }
safe_arith = { workspace = true }
serde = { workspace = true }
serde_array_query = "0.1.0"
serde_json = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
warp = { workspace = true }
