[package]
name = "fork_choice"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
fixed_bytes = { workspace = true }
logging = { workspace = true }
metrics = { workspace = true }
proto_array = { workspace = true }
state_processing = { workspace = true }
superstruct = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }

[dev-dependencies]
beacon_chain = { workspace = true }
bls = { workspace = true }
store = { workspace = true }
tokio = { workspace = true }
