[package]
name = "proto_array"
version = "0.2.0"
authors = ["Paul Hauner <paul@sigmaprime.io>"]
edition = { workspace = true }

[[bin]]
name = "proto_array"
path = "src/bin.rs"

[dependencies]
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
fixed_bytes = { workspace = true }
safe_arith = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
superstruct = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }
yaml_serde = { workspace = true }
