[package]
name = "state_processing"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>", "Michael Sproul <michael@sigmaprime.io>"]
edition = { workspace = true }

[features]
default = []
fake_crypto = ["bls/fake_crypto"]
arbitrary = [
    "dep:arbitrary",
    "smallvec/arbitrary",
    "types/arbitrary",
    "merkle_proof/arbitrary",
    "ethereum_ssz/arbitrary",
    "ssz_types/arbitrary",
    "tree_hash/arbitrary",
]
portable = ["bls/supranational-portable"]

[dependencies]
arbitrary = { workspace = true, optional = true }
bls = { workspace = true }
educe = { workspace = true }
ethereum_hashing = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
fixed_bytes = { workspace = true }
int_to_bytes = { workspace = true }
integer-sqrt = "0.1.5"
itertools = { workspace = true }
merkle_proof = { workspace = true }
metrics = { workspace = true }
milhouse = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
safe_arith = { workspace = true }
smallvec = { workspace = true }
ssz_types = { workspace = true }
test_random_derive = { path = "../../common/test_random_derive" }
tracing = { workspace = true }
tree_hash = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }

[dev-dependencies]
beacon_chain = { workspace = true }
tokio = { workspace = true }
