[package]
name = "kzg"
version = "0.1.0"
authors = ["Pawan Dhananjay <pawandhananjay@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
arbitrary = ["dep:arbitrary"]
fake_crypto = []

[dependencies]
arbitrary = { workspace = true, optional = true }
c-kzg = { workspace = true }
educe = { workspace = true }
ethereum_hashing = { workspace = true }
ethereum_serde_utils = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
rust_eth_kzg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tree_hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
