[package]
name = "execution_engine_integration"
version = "0.1.0"
edition = { workspace = true }

[features]
portable = ["types/portable"]

[dependencies]
async-channel = { workspace = true }
deposit_contract = { workspace = true }
ethers-core = { workspace = true }
ethers-middleware = { workspace = true }
ethers-providers = { workspace = true }
ethers-signers = { workspace = true }
execution_layer = { workspace = true }
fork_choice = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
logging = { workspace = true }
network_utils = { workspace = true }
reqwest = { workspace = true }
sensitive_url = { workspace = true }
serde_json = { workspace = true }
task_executor = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
