[package]
name = "execution_engine_integration"
version = "0.1.0"
edition = { workspace = true }

[features]
portable = ["types/portable"]

[dependencies]
alloy-network = "1.0"
alloy-primitives = { workspace = true }
alloy-provider = "1.0"
alloy-rpc-types-eth = { workspace = true }
alloy-signer-local = "1.0"
async-channel = { workspace = true }
deposit_contract = { workspace = true }
execution_layer = { workspace = true }
fork_choice = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
logging = { workspace = true }
network_utils = { workspace = true }
reqwest = { workspace = true }
sensitive_url = { workspace = true }
serde_json = { workspace = true }
task_executor = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
